--- a/views/home.ejs
+++ b/views/home.ejs
@@ -106,7 +106,6 @@
 <div id="result-wrapper">      
     <div id="result">
                 <div class="loader">
-                </div>
                         <div class = "whitespace" id="status"></div>
 
                         </div>
@@ -124,14 +123,9 @@
                 
                 </div>
                 <div id="stacktrace" class = "whitespace"></div>
-      </div>  
-   </div>
-       
-        <div id="stacktrace-wrapper">
-                <div id="stacktrace" class = "whitespace"></div>
-                <div id="errordescription" class="whitespace"></div>
-        </div>
-        <div class="modal"><!-- Place at bottom of page --></div>
+            </div>
+ </div>            
+        <div class="modal"></div>
 
 <!-- The Modal -->
 <div id="myModal" class="modalpopup">
@@ -177,7 +171,7 @@
             
             $("#opponentsResult").hide();
             $("#result").hide();
-            $("#stacktrace-wrapper").hide();
+            $("#stacktrace").hide();
             $("#cancelMatch").hide();
             $('.loader').hide();
             var data = {
@@ -291,12 +285,6 @@
                 });
 
                 socket.on('challengeCancelled', function(response){
-                        if(confirm('Do you want to keep your friends code?')){
-
-                        }else{
-                            editor2.setValue('');
-                        }
-                        console.log('cancel event received');
                         $("#clockdiv").hide();
                         $("#cancelMatch").hide();
                         var filterVal = 'blur(0px)';
@@ -380,28 +368,10 @@
                     socket.emit('challengeRejected',{opponentSocketID:socket.id});
         } 
         function challengeAccepted(){
-                        console.log('length my code'+editor.getValue().length);
-                        if(editor.getValue().length != 0){
-                            if(confirm('Do you want to keep your current code?')){
-
-                            }else{
-                                editor.setValue('');
-                            }
-                        }
                         socket.emit('challengeAccepted',{opponentSocketID:socket.id});
         }
 
         function cancelChallenge(){
-                console.log('length friend code'+editor2.getValue().length);
-                    if(editor2.getValue().length != 0){
-
-                   
-                        if(confirm('Do you want to keep your friends code?')){
-
-                        }else{
-                            editor2.setValue('');
-                        }
-                    }
                         $("#clockdiv").hide();
                         $("#cancelMatch").hide();
                         var filterVal = 'blur(0px)';
@@ -412,7 +382,7 @@
                         .css('oFilter',filterVal)
                         .css('msFilter',filterVal);
                         $('#clockdiv').attr('data-inMatch', 'false');
-                        socket.emit('cancelChallenge',{mySocketID:socket.id});
+                        socket.emit('cancleChallenge',{mySocketID:socket.id});
         }
 
        function compile(){
@@ -442,16 +412,8 @@
         function getCompileData(data)  {
             $('.loader').hide();
             console.log(data)
-            if(data.compileData.statusid == '1'){
-                $('#status').text(data.compileData.status);
-                $('#youroutput').text(data.compileData.result);
-            }else{
-                $('#result-wrapper').hide();
-                $('#stacktrace-wrapper').show();
-                $('#stacktrace').text(data.compileData.stderr);
-                $('#errorDescription').text(data.compileData.stderr);
-            }
-            
+            $('#status').text(data.compileData.status);
+            $('#youroutput').text(data.compileData.result);
         }
 
         function submit(){
