--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -6,4 +6,4 @@
         <script src="//ajaxorg.github.io/ace-builds/src-min-noconflict/ace.js" type="text/javascript" charset="utf-8"></script>
         <script src="/socket.io/socket.io.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <title>ACE in Action</title>    
+    <title>Pair Programming</title>    
