Fixed index.js 2. Reverting from this position to previous code because inamatch not working

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -154,6 +154,9 @@ ul.user-details{
       font-display: "SUCCESS";
   }
 
+  #result-wrapper{
+    color:white
+  }
   /* Start by setting display:none to make this hidden.
    Then we position it in relation to the viewport window
    with position:fixed. Width, height, top and left speak
