--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -157,6 +157,28 @@ ul.user-details{
   #result-wrapper{
     color:white
   }
+
+  #area1{
+    width: 50%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    color:black;
+    border-radius: 4px;
+    box-sizing: border-box;
+    border: 3px solid blueviolet;
+  }
+  
+  #area3{
+    width: 50%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    color:black;
+    border: 3px solid blueviolet;
+    border-radius: 4px;
+    box-sizing: border-box;
+  }
   /* Start by setting display:none to make this hidden.
    Then we position it in relation to the viewport window
    with position:fixed. Width, height, top and left speak
@@ -260,3 +282,6 @@ body.loading .modal {
     100% { transform: rotate(360deg); }
   }
   
+#stacktrace{
+    color:red
+}
